// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceList: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <MobileMenu
    active="dataSourceNavBtn"
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ProjectTabs
    active="sources"
    url="/project/1"
  />
  <ContextHeader
    subtitle="Overview"
    title="Data Sources"
  >
    <PlusLink
      id="createDataSourceDesktopBtn"
      size={60}
      to="/project/1/datasource/add"
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent="No Data Sources"
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
                isIcon={true}
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                2
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            id="dataSourceStatus"
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="No data source uploaded"
              id="project.dataSourceList.noDataSourceUploaded"
            />
          </ForwardRef(styled.span)>
        }
        id="dataSourceContainer"
        key="0"
      >
        <Styled(Link)
          id="dataSourceTitle"
          to="/datasource/17/source"
        >
          name
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
                isIcon={true}
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            id="dataSourceStatus"
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="No data source uploaded"
              id="project.dataSourceList.noDataSourceUploaded"
            />
          </ForwardRef(styled.span)>
        }
        id="dataSourceContainer"
        key="1"
      >
        <Styled(Link)
          id="dataSourceTitle"
          to="/datasource/17/preview"
        >
          name
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
                isIcon={true}
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                1
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            id="dataSourceStatus"
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="No data source uploaded"
              id="project.dataSourceList.noDataSourceUploaded"
            />
          </ForwardRef(styled.span)>
        }
        id="dataSourceContainer"
        key="2"
      >
        <Styled(Link)
          id="dataSourceTitle"
          to="/datasource/17/preview"
        >
          name
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
                isIcon={true}
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            id="dataSourceStatus"
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="No data source uploaded"
              id="project.dataSourceList.noDataSourceUploaded"
            />
          </ForwardRef(styled.span)>
        }
        id="dataSourceContainer"
        key="3"
      >
        <Styled(Link)
          id="dataSourceTitle"
          to="/datasource/17/preview"
        >
          name
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
                isIcon={true}
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                3
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            id="dataSourceStatus"
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="No data source uploaded"
              id="project.dataSourceList.noDataSourceUploaded"
            />
          </ForwardRef(styled.span)>
        }
        id="dataSourceContainer"
        key="4"
      >
        <Styled(Link)
          id="dataSourceTitle"
          to="/datasource/17/preview"
        >
          name
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
                isIcon={true}
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            id="dataSourceStatus"
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="No data source uploaded"
              id="project.dataSourceList.noDataSourceUploaded"
            />
          </ForwardRef(styled.span)>
        }
        id="dataSourceContainer"
        key="5"
      >
        <Styled(Link)
          id="dataSourceTitle"
          to="/datasource/17/preview"
        >
          name
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
                isIcon={true}
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                2
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            id="dataSourceStatus"
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="No data source uploaded"
              id="project.dataSourceList.noDataSourceUploaded"
            />
          </ForwardRef(styled.span)>
        }
        id="dataSourceContainer"
        key="6"
      >
        <Styled(Link)
          id="dataSourceTitle"
          to="/datasource/17/preview"
        >
          name
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
                isIcon={true}
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            id="dataSourceStatus"
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file failed"
              id="project.dataSourceList.fileUploadingError"
            />
          </ForwardRef(styled.span)>
        }
        id="dataSourceContainer"
        key="7"
      >
        <Styled(Link)
          id="dataSourceTitle"
          to="/datasource/18/preview"
        >
          name
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
                isIcon={true}
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                4
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            id="dataSourceStatus"
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file {uploadProgress}%..."
              id="project.dataSourceList.fileUploading"
              values={
                Object {
                  "uploadProgress": 50,
                }
              }
            />
          </ForwardRef(styled.span)>
        }
        id="dataSourceContainer"
        key="8"
      >
        <Styled(Link)
          id="dataSourceTitle"
          to="/datasource/20/preview"
        >
          name
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
                isIcon={true}
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            id="dataSourceStatus"
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="No data source uploaded"
              id="project.dataSourceList.noDataSourceUploaded"
            />
          </ForwardRef(styled.span)>
        }
        id="dataSourceContainer"
        key="9"
      >
        <Styled(Link)
          id="dataSourceTitle"
          to="/datasource/19/preview"
        >
          name
        </Styled(Link)>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackLink
      id="backBtn"
      to="/project/1"
    />
    <PlusLink
      hideOnDesktop={true}
      id="createDataSourceBtn"
      size={60}
      to="/project/1/datasource/add"
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DataSourceList: Component should render empty 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <MobileMenu
    active="dataSourceNavBtn"
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ProjectTabs
    active="sources"
    url="/project/1"
  />
  <ContextHeader
    subtitle="Overview"
    title="Data Sources"
  >
    <PlusLink
      id="createDataSourceDesktopBtn"
      size={60}
      to="/project/1/datasource/add"
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={true}
    noDataContent="No Data Sources"
  >
    <styled.section />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackLink
      id="backBtn"
      to="/project/1"
    />
    <PlusLink
      hideOnDesktop={true}
      id="createDataSourceBtn"
      size={60}
      to="/project/1/datasource/add"
    />
  </NavigationContainer>
</styled.div>
`;
